--- a/_includes/author-box.html
+++ b/_includes/author-box.html
@@ -12,7 +12,7 @@
             <p class="mt-4 mb-0 small text-center">
                 <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author.web }}"><i class="fa-solid fa-link"></i></a> 
                 <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author.facebook }}"><i class="fa-brands fa-facebook"></i></a>
-                <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].instagram }}"><i class="fa-brands fa-instagram-square"></i></a>
+                <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].instagram }}"><i class="fa-brands fa-instagram"></i></a>
                 <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author.twitter }}"><i class="fa-brands fa-twitter"></i></a>
 
                 <a class="d-inline-block mx-1 text-dark" href="mailto:{{ author.email }}"><i class="fa-solid fa-envelope"></i></a>
