fix instagram link in author box

--- a/_includes/author-box.html
+++ b/_includes/author-box.html
@@ -19,7 +19,7 @@
                 {% endif %}
 
                 {% if author.instagram %}
-                <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].instagram }}"><i class="fa-brands fa-instagram"></i></a>
+                <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author.instagram }}"><i class="fa-brands fa-instagram"></i></a>
                 {% endif %}
 
                 {% if author.twitter %}
