--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,6 +113,11 @@
         <div class="row">
             <div class="col-md-6 col-sm-12 text-center text-lg-left">
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
+
+                <a target="_blank" class="d-inline-block mx-1 text-dark" href="https://www.instagram.com/stateless.my/"><i class="fa-solid fa-link"></i></a>
+
+                <a target="_blank" class="d-inline-block mx-1 text-dark" href="https://www.facebook.com/stateless.my"><i class="fa-brands fa-instagram"></i></a>
+
             </div>
             <div class="col-md-6 col-sm-12 text-center text-lg-right">    
                 <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/">Memoirs Jekyll Theme</a>
