--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,7 +120,7 @@
 
             </div>
             <div class="col-md-6 col-sm-12 text-center text-lg-right">    
-                <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/">Memoirs Jekyll Theme</a>
+                <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/">Powered by Memoirs Jekyll Theme</a>
             </div>
         </div>
     </div>
