--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -446,6 +446,7 @@ img, img:hover {
     p {
         margin-top:30px;
         margin-bottom:30px;
+        justify-content: center;
     }
     code {
         font-size: 15px;
