--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -114,9 +114,9 @@
             <div class="col-md-6 col-sm-12 text-center text-lg-left">
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
 
-                <a target="_blank" class="d-inline-block mx-1 text-dark" href="https://www.instagram.com/stateless.my/"><i class="fa-brands fa-facebook"></i></a>
+                <a target="_blank" class="d-inline-block mx-1 text-dark" href="https://www.instagram.com/stateless.my/"><i class="fa-brands fa-instagram></i></a>
 
-                <a target="_blank" class="d-inline-block mx-1 text-dark" href="https://www.facebook.com/stateless.my"><i class="fa-brands fa-instagram"></i></a>
+                <a target="_blank" class="d-inline-block mx-1 text-dark" href="https://www.facebook.com/stateless.my"><i class="fa-brands fa-facebook"></i></a>
 
             </div>
             <div class="col-md-6 col-sm-12 text-center text-lg-right">    
