--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,8 +106,7 @@
     
 </div>
 
-<!-- Begin Footer
-================================================== -->
+<!-- Begin Footer================================================== -->
 <footer class="footer">
     <div class="container">
         <div class="row">
