--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -38,7 +38,7 @@
                 {% endif %}
                 </span>
                 <span class="author-meta">
-                <span class="post-name font-weight-bold">{{ author.display_name }}</span> 
+                <span class="post-name">{{ author.display_name }}</span> 
                 {% endif %}
                 <span class="post-date">{{ post.date | date_to_string }}</span>
                 </span>
