--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -40,7 +40,7 @@
                 <span class="author-meta">
                 <span class="post-name">{{ author.display_name }}</span> 
                 {% endif %}
-                <span class="post-date">{{ post.date | date_to_string }}</span>
+                <span class="post-date font-weight-bold">{{ post.date | date_to_string }}</span>
                 </span>
                 <div class="clearfix"></div>
             </div>
