--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<link rel="icon" href="{{ site.baseurl }}/assets/images/logo-01-01.jpeg">
+<link rel="icon" href="{{ site.baseurl }}/assets/images/flag-2.png">
 
 <title>{{ page.title }} | {{site.name}}</title>
 
